fix bug increase ui

--- a/public/js/blocks/about/about1/about.html
+++ b/public/js/blocks/about/about1/about.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About var 1</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./about.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-  <div class="about_box_id-1">
-    <div class="ab_bx_id_1-back-image"
-      style="background-image: url(https://t4.ftcdn.net/jpg/04/88/97/77/360_F_488977723_TxnJAl6jcX3tWdgHphJTdNhrFytlNMyJ.jpg)">
+  <div class="about_box_id-1"
+    style="background-image: url(https://t4.ftcdn.net/jpg/04/88/97/77/360_F_488977723_TxnJAl6jcX3tWdgHphJTdNhrFytlNMyJ.jpg)">
+    <div class="ab_bx_id_1-back-image">
       <div class="ab_bx_id_1-back-image-under">
         <div class="ab_bx_id_1-sider-section wrapper">
           <div class="ab_bx_id_1-under-sectoin text_left">
