--- a/public/js/blocks/contact/contact11.html
+++ b/public/js/blocks/contact/contact11.html
@@ -57,7 +57,8 @@
       <div class="rounded-xl bg-white p-8 shadow-md ring-1 ring-slate-200">
         <h4 class="text-2xl font-bold text-slate-900">Contact Form</h4>
 
-        <form class="mt-6">
+        <form class="mt-6"> 
+          <input type="hidden" name="_token" value="">
           <!-- Row -->
           <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
             <div>
@@ -108,6 +109,48 @@
               Submit Now
             </button>
           </div>
+           <script>
+        (async function (s) {
+          try {
+            var f = s.closest('form');
+            if (!f) return;
+
+            // Respect Traits; only inject for non-GET
+            var m = (f.getAttribute('method') || 'post').toLowerCase();
+            if (m === 'get') return;
+
+            // 1) Try meta
+            var token = document.querySelector('meta[name="csrf-token"]')?.content;
+
+            // 2) If absent (static publish), fetch from Laravel to initialize session+token
+            if (!token) {
+              var r = await fetch('/csrf-token', { credentials: 'same-origin' });
+              if (r.ok) token = (await r.json()).token;
+            }
+
+            if (!token) return;
+
+            // Write meta for other scripts
+            var meta = document.querySelector('meta[name="csrf-token"]');
+            if (!meta) {
+              meta = document.createElement('meta');
+              meta.setAttribute('name', 'csrf-token');
+              document.head.appendChild(meta);
+            }
+            meta.setAttribute('content', token);
+
+            // Ensure hidden _token exists and is filled
+            var t = f.querySelector('input[name="_token"]');
+            if (!t) {
+              t = document.createElement('input');
+              t.type = 'hidden';
+              t.name = '_token';
+              f.appendChild(t);
+            }
+            t.value = token;
+          } catch (e) { }
+        })(document.currentScript);
+      </script>
         </form>
       </div>
     </div>
