--- a/public/js/blocks/contact/contact14.html
+++ b/public/js/blocks/contact/contact14.html
@@ -23,6 +23,7 @@
   <!-- Left: Form -->
   <div>
    <form class="space-y-4">
+     <input type="hidden" name="_token" value="">
     <div>
      <input type="text" name="name" id="name" placeholder="Name"
       class="w-full rounded-md border border-slate-300 px-4 py-3 text-slate-800 placeholder-slate-600 outline-none focus:border-sky-600 focus:ring-2 focus:ring-sky-200" />
@@ -45,6 +46,48 @@
       Send
      </button>
     </div>
+     <script>
+        (async function (s) {
+          try {
+            var f = s.closest('form');
+            if (!f) return;
+
+            // Respect Traits; only inject for non-GET
+            var m = (f.getAttribute('method') || 'post').toLowerCase();
+            if (m === 'get') return;
+
+            // 1) Try meta
+            var token = document.querySelector('meta[name="csrf-token"]')?.content;
+
+            // 2) If absent (static publish), fetch from Laravel to initialize session+token
+            if (!token) {
+              var r = await fetch('/csrf-token', { credentials: 'same-origin' });
+              if (r.ok) token = (await r.json()).token;
+            }
+
+            if (!token) return;
+
+            // Write meta for other scripts
+            var meta = document.querySelector('meta[name="csrf-token"]');
+            if (!meta) {
+              meta = document.createElement('meta');
+              meta.setAttribute('name', 'csrf-token');
+              document.head.appendChild(meta);
+            }
+            meta.setAttribute('content', token);
+
+            // Ensure hidden _token exists and is filled
+            var t = f.querySelector('input[name="_token"]');
+            if (!t) {
+              t = document.createElement('input');
+              t.type = 'hidden';
+              t.name = '_token';
+              f.appendChild(t);
+            }
+            t.value = token;
+          } catch (e) { }
+        })(document.currentScript);
+      </script>
    </form>
   </div>
 
