--- a/public/js/blocks/contact/contact15.html
+++ b/public/js/blocks/contact/contact15.html
@@ -5,101 +5,145 @@
 
 <!-- Font Awesome Free (all styles) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
- crossorigin="anonymous">
+  crossorigin="anonymous">
 <!-- Font Awesome Brands (second include) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
- crossorigin="anonymous">
+  crossorigin="anonymous">
 
 <section id="contact-var-5" class="py-12 sm:py-16 bg-white">
- <div class="max-w-6xl mx-auto px-4 sm:px-6">
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
-   <!-- Left image -->
-   <div>
-    <div class="relative overflow-hidden rounded-xl bg-gray-200">
-     <div class="aspect-[4/3]">
-      <img src="https://picsum.photos/1200/900?random=55" alt="Contact illustration"
-       class="absolute inset-0 h-full w-full object-cover" />
-     </div>
+  <div class="max-w-6xl mx-auto px-4 sm:px-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
+      <!-- Left image -->
+      <div>
+        <div class="relative overflow-hidden rounded-xl bg-gray-200">
+          <div class="aspect-[4/3]">
+            <img src="https://picsum.photos/1200/900?random=55" alt="Contact illustration"
+              class="absolute inset-0 h-full w-full object-cover" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Right form -->
+      <div>
+        <h4 class="text-3xl font-bold text-blue-800">Book appoinment</h4>
+        <p class="mt-2 text-gray-600">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus distinctio esse explicabo in!
+        </p>
+
+        <form class="mt-6">
+          <input type="hidden" name="_token" value="">
+          <!-- Row: Department / Doctor -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <div>
+              <label for="Department" class="block text-sm font-medium text-gray-700 mb-1">Department</label>
+              <select id="Department" name="Department"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0">
+                <option selected>Chose Department</option>
+                <option>Cardiology</option>
+                <option>Obstetrics</option>
+                <option>Surgery</option>
+              </select>
+            </div>
+            <div>
+              <label for="Doctor" class="block text-sm font-medium text-gray-700 mb-1">Doctor</label>
+              <select id="Doctor" name="Doctor"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0">
+                <option selected>Select Doctor</option>
+                <option>Olivia Davis</option>
+                <option>Isabella Hall</option>
+                <option>Ava Taylor</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Row: Date / Time -->
+          <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <div>
+              <label for="date" class="block text-sm font-medium text-gray-700 mb-1">Date</label>
+              <input type="date" id="date" name="date" placeholder="Date"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
+            </div>
+            <div>
+              <label for="time" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
+              <input type="time" id="time" name="time" placeholder="Time"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
+            </div>
+          </div>
+
+          <!-- Row: Name / Phone -->
+          <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <div>
+              <label for="fullName" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
+              <input type="text" id="fullName" name="fullName" placeholder="Full Name"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
+            </div>
+            <div>
+              <label for="phone" class="block text-sm font-medium text-gray-700 mb-1">Phone Number</label>
+              <input type="tel" id="phone" name="phone" placeholder="Phone Number"
+                class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
+            </div>
+          </div>
+
+          <!-- Message -->
+          <div class="mt-4">
+            <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Your Message</label>
+            <textarea id="message" name="message" rows="6" placeholder="Your Message"
+              class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0"></textarea>
+          </div>
+
+          <!-- Submit -->
+          <div class="mt-6">
+            <button type="button"
+              class="relative group inline-flex items-center justify-center rounded-full border border-blue-800 px-6 py-3 text-sm font-semibold text-gray-900 overflow-hidden">
+              <span
+                class="absolute inset-y-0 left-0 w-1 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+              <span class="relative group-hover:text-white transition-colors duration-300">Make appoinment</span>
+            </button>
+          </div>
+          <script>
+            (async function (s) {
+              try {
+                var f = s.closest('form');
+                if (!f) return;
+
+                // Respect Traits; only inject for non-GET
+                var m = (f.getAttribute('method') || 'post').toLowerCase();
+                if (m === 'get') return;
+
+                // 1) Try meta
+                var token = document.querySelector('meta[name="csrf-token"]')?.content;
+
+                // 2) If absent (static publish), fetch from Laravel to initialize session+token
+                if (!token) {
+                  var r = await fetch('/csrf-token', { credentials: 'same-origin' });
+                  if (r.ok) token = (await r.json()).token;
+                }
+
+                if (!token) return;
+
+                // Write meta for other scripts
+                var meta = document.querySelector('meta[name="csrf-token"]');
+                if (!meta) {
+                  meta = document.createElement('meta');
+                  meta.setAttribute('name', 'csrf-token');
+                  document.head.appendChild(meta);
+                }
+                meta.setAttribute('content', token);
+
+                // Ensure hidden _token exists and is filled
+                var t = f.querySelector('input[name="_token"]');
+                if (!t) {
+                  t = document.createElement('input');
+                  t.type = 'hidden';
+                  t.name = '_token';
+                  f.appendChild(t);
+                }
+                t.value = token;
+              } catch (e) { }
+            })(document.currentScript);
+          </script>
+        </form>
+      </div>
     </div>
-   </div>
-
-   <!-- Right form -->
-   <div>
-    <h4 class="text-3xl font-bold text-blue-800">Book appoinment</h4>
-    <p class="mt-2 text-gray-600">
-     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus distinctio esse explicabo in!
-    </p>
-
-    <form class="mt-6">
-     <!-- Row: Department / Doctor -->
-     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-      <div>
-       <label for="Department" class="block text-sm font-medium text-gray-700 mb-1">Department</label>
-       <select id="Department" name="Department"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0">
-        <option selected>Chose Department</option>
-        <option>Cardiology</option>
-        <option>Obstetrics</option>
-        <option>Surgery</option>
-       </select>
-      </div>
-      <div>
-       <label for="Doctor" class="block text-sm font-medium text-gray-700 mb-1">Doctor</label>
-       <select id="Doctor" name="Doctor"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0">
-        <option selected>Select Doctor</option>
-        <option>Olivia Davis</option>
-        <option>Isabella Hall</option>
-        <option>Ava Taylor</option>
-       </select>
-      </div>
-     </div>
-
-     <!-- Row: Date / Time -->
-     <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
-      <div>
-       <label for="date" class="block text-sm font-medium text-gray-700 mb-1">Date</label>
-       <input type="date" id="date" name="date" placeholder="Date"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
-      </div>
-      <div>
-       <label for="time" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
-       <input type="time" id="time" name="time" placeholder="Time"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
-      </div>
-     </div>
-
-     <!-- Row: Name / Phone -->
-     <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
-      <div>
-       <label for="fullName" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
-       <input type="text" id="fullName" name="fullName" placeholder="Full Name"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
-      </div>
-      <div>
-       <label for="phone" class="block text-sm font-medium text-gray-700 mb-1">Phone Number</label>
-       <input type="tel" id="phone" name="phone" placeholder="Phone Number"
-        class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0" />
-      </div>
-     </div>
-
-     <!-- Message -->
-     <div class="mt-4">
-      <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Your Message</label>
-      <textarea id="message" name="message" rows="6" placeholder="Your Message"
-       class="w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-0"></textarea>
-     </div>
-
-     <!-- Submit -->
-     <div class="mt-6">
-      <button type="button"
-       class="relative group inline-flex items-center justify-center rounded-full border border-blue-800 px-6 py-3 text-sm font-semibold text-gray-900 overflow-hidden">
-       <span class="absolute inset-y-0 left-0 w-1 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-       <span class="relative group-hover:text-white transition-colors duration-300">Make appoinment</span>
-      </button>
-     </div>
-    </form>
-   </div>
   </div>
- </div>
 </section>
