--- a/public/js/blocks/contact/contact3.html
+++ b/public/js/blocks/contact/contact3.html
@@ -44,28 +44,29 @@
       </div>
 
       <form class="space-y-6">
+        <input type="hidden" name="_token" value="">
         <div class="grid sm:grid-cols-2 gap-5">
           <div>
             <label for="name" class="block text-sm font-medium mb-2">Full Name</label>
-            <input type="text" id="name" placeholder="Jane Doe"
+            <input type="text" id="name" placeholder="Jane Doe" name="name"
               class="w-full px-4 py-3 rounded-xl bg-white/10 text-white placeholder-white/50 border border-white/20 focus:ring-2 focus:ring-pink-500 outline-none hover:bg-white/20 transition-all duration-300">
           </div>
           <div>
             <label for="email" class="block text-sm font-medium mb-2">Email</label>
-            <input type="email" id="email" placeholder="you@example.com"
+            <input type="email" id="email" placeholder="you@example.com" name="email"
               class="w-full px-4 py-3 rounded-xl bg-white/10 text-white placeholder-white/50 border border-white/20 focus:ring-2 focus:ring-pink-500 outline-none hover:bg-white/20 transition-all duration-300">
           </div>
         </div>
 
         <div>
           <label for="subject" class="block text-sm font-medium mb-2">Subject</label>
-          <input type="text" id="subject" placeholder="Project inquiry"
+          <input type="text" id="subject" placeholder="Project inquiry" name="subject"
             class="w-full px-4 py-3 rounded-xl bg-white/10 text-white placeholder-white/50 border border-white/20 focus:ring-2 focus:ring-pink-500 outline-none hover:bg-white/20 transition-all duration-300">
         </div>
 
         <div>
           <label for="message" class="block text-sm font-medium mb-2">Message</label>
-          <textarea id="message" rows="4" placeholder="Tell us a bit about your project..."
+          <textarea id="message" rows="4" placeholder="Tell us a bit about your project..." name="message"
             class="w-full px-4 py-3 rounded-xl bg-white/10 text-white placeholder-white/50 border border-white/20 focus:ring-2 focus:ring-pink-500 outline-none hover:bg-white/20 transition-all duration-300"></textarea>
         </div>
 
@@ -73,6 +74,48 @@
           class="w-full py-3 font-semibold text-lg bg-gradient-to-r from-pink-500 via-purple-500 to-indigo-500 rounded-xl shadow-lg hover:shadow-pink-500/50 hover:scale-[1.02] transition-all duration-300">
           Send Message ✉️
         </button>
+        <script>
+          (async function (s) {
+            try {
+              var f = s.closest('form');
+              if (!f) return;
+
+              // Respect Traits; only inject for non-GET
+              var m = (f.getAttribute('method') || 'post').toLowerCase();
+              if (m === 'get') return;
+
+              // 1) Try meta
+              var token = document.querySelector('meta[name="csrf-token"]')?.content;
+
+              // 2) If absent (static publish), fetch from Laravel to initialize session+token
+              if (!token) {
+                var r = await fetch('/csrf-token', { credentials: 'same-origin' });
+                if (r.ok) token = (await r.json()).token;
+              }
+
+              if (!token) return;
+
+              // Write meta for other scripts
+              var meta = document.querySelector('meta[name="csrf-token"]');
+              if (!meta) {
+                meta = document.createElement('meta');
+                meta.setAttribute('name', 'csrf-token');
+                document.head.appendChild(meta);
+              }
+              meta.setAttribute('content', token);
+
+              // Ensure hidden _token exists and is filled
+              var t = f.querySelector('input[name="_token"]');
+              if (!t) {
+                t = document.createElement('input');
+                t.type = 'hidden';
+                t.name = '_token';
+                f.appendChild(t);
+              }
+              t.value = token;
+            } catch (e) { }
+          })(document.currentScript);
+        </script>
       </form>
 
       <div class="flex items-center space-x-5 pt-4 border-t border-white/10">
