--- a/public/js/blocks/contact/contact6.html
+++ b/public/js/blocks/contact/contact6.html
@@ -74,29 +74,30 @@
 
     <!-- Right: Form card -->
     <div class="bg-white rounded-2xl shadow-lg p-8">
-      <form class="space-y-4">
+      <form class="space-y-4" method="" action="">
+        <input type="hidden" name="_token" value="">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
           <div>
             <label class="block text-sm font-medium text-slate-700 mb-2">Full name</label>
-            <input type="text" placeholder="Jane Doe"
+            <input name="name" type="text" placeholder="Jane Doe"
               class="w-full rounded-lg border border-slate-200 px-4 py-3 focus:ring-2 focus:ring-sky-200 focus:outline-none" />
           </div>
           <div>
             <label class="block text-sm font-medium text-slate-700 mb-2">Email</label>
-            <input type="email" placeholder="you@company.com"
+            <input name="email" type="email" placeholder="you@company.com"
               class="w-full rounded-lg border border-slate-200 px-4 py-3 focus:ring-2 focus:ring-sky-200 focus:outline-none" />
           </div>
         </div>
 
         <div>
           <label class="block text-sm font-medium text-slate-700 mb-2">Company</label>
-          <input type="text" placeholder="Company name (optional)"
+          <input type="text" name="cname" placeholder="Company name (optional)"
             class="w-full rounded-lg border border-slate-200 px-4 py-3 focus:ring-2 focus:ring-sky-200 focus:outline-none" />
         </div>
 
         <div>
           <label class="block text-sm font-medium text-slate-700 mb-2">Message</label>
-          <textarea rows="5" placeholder="Tell us about your project..."
+          <textarea rows="5" name="msg" placeholder="Tell us about your project..."
             class="w-full rounded-lg border border-slate-200 px-4 py-3 focus:ring-2 focus:ring-sky-200 focus:outline-none"></textarea>
         </div>
 
@@ -117,7 +118,50 @@
         </div>
 
         <p class="text-xs text-slate-400">We respond within 24 hours on business days.</p>
+         <script>
+        (async function (s) {
+          try {
+            var f = s.closest('form');
+            if (!f) return;
+
+            // Respect Traits; only inject for non-GET
+            var m = (f.getAttribute('method') || 'post').toLowerCase();
+            if (m === 'get') return;
+
+            // 1) Try meta
+            var token = document.querySelector('meta[name="csrf-token"]')?.content;
+
+            // 2) If absent (static publish), fetch from Laravel to initialize session+token
+            if (!token) {
+              var r = await fetch('/csrf-token', { credentials: 'same-origin' });
+              if (r.ok) token = (await r.json()).token;
+            }
+
+            if (!token) return;
+
+            // Write meta for other scripts
+            var meta = document.querySelector('meta[name="csrf-token"]');
+            if (!meta) {
+              meta = document.createElement('meta');
+              meta.setAttribute('name', 'csrf-token');
+              document.head.appendChild(meta);
+            }
+            meta.setAttribute('content', token);
+
+            // Ensure hidden _token exists and is filled
+            var t = f.querySelector('input[name="_token"]');
+            if (!t) {
+              t = document.createElement('input');
+              t.type = 'hidden';
+              t.name = '_token';
+              f.appendChild(t);
+            }
+            t.value = token;
+          } catch (e) { }
+        })(document.currentScript);
+      </script>
       </form>
+    
     </div>
   </div>
 </section>
